# ChangeLog for www-plugins/duckduckgo
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*classic-theme-restorer-1.2.6.1 (28 Nov 2014)

  28 Nov 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*classic-theme-restorer-1.2.5 (02 Nov 2014)

  02 Nov 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*classic-theme-restorer-1.2.3 (22 Aug 2014)

  22 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*classic-theme-restorer-1.1.8 (01 Mar 2014)

  01 Mar 2014; Martin Väth <martin@mvath.de>:
  New ebuild