@@ -1,2 +1,4 @@
-copy-extensions - Copy extensions for each firefox/seamonkey separately instead of using hardlinks. This may be necessary if you have e.g. /opt and /usr on different partitions or if cp -RPl is not supported by your system.
-symlink-extensions - Use symlinks for extensions of firefox/seamonkey instead of hardlinks or copies. This may require to remove ~/.mozilla/*/*/extensions.ini at each restart of the browser.
+firefox - Install extension for www-client/firefox
+firefox-bin - Install extension for the www-client/firefox-bin
+seamonkey - Install extension for the www-client/seamonkey
+seamonkey-bin - Install extension for the www-client/seamonkey-bin
