@@ -1,1 +1,1 @@
-DIST classic_theme_restorer_customize_ui-1.2.8.2-fx.xpi 433727 SHA256 b0f2f78279c243df9446a505ecd14be66add58eb161168d9567c788b37a5894e SHA512 39dd51b56942693dadbd79ba821a761948ea01a31f4ad2f84d6b4c94eeabb4e8a0c3a60c960466329681f2eb4e9dbf7fb4344f34613744f19a2b115244aa10e3 WHIRLPOOL 7003220a7afa9be1f8ee3726c57e6a21154f60f2d48e98a1fb241ef61cd2c49da053da760ca645a9cca7e11f9aaf4a60e2a45435c3fe1d129071819444fcb43e
+DIST classic_theme_restorer_customize_ui-1.2.9-fx.xpi 447488 SHA256 7bef63a23ea09ec2f66f888b2ceff55779cb31b5d1edd5ce4c8ec95f7cdfce18 SHA512 3a0511503d90d1b4149a3e4b0c2dbf48dd220d3cb7437f67b0c2861949cc30af56e7671280dcaa07f4ee655c41bdd327fa926e2ad7fa0abb3bfd67639c6547e3 WHIRLPOOL 316489a379da7f33fb517b7b93349cd5b5d3868eba59ce6138f56bb3b64ebe35f26a50232b3f5fcc6434f41d463832029b5915000dec0e58098dc7dd625c0c48
