@@ -1,6 +1,16 @@
-# ChangeLog for www-plugins/duckduckgo
+# ChangeLog for www-plugins/classic-theme-restorer
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*classic-theme-restorer-1.2.9 (25 Jan 2015)
+
+  25 Jan 2015; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
+*classic-theme-restorer-1.2.8.2 (02 Jan 2015)
+
+  02 Jan 2015; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
 
 *classic-theme-restorer-1.2.6.1 (28 Nov 2014)
 
